# mw_density_imig2025

./: Part0_Sample_Selection.ipynb  Part1_Selection_Function.ipynb  Part2_Density_Fits.ipynb  README.md  pyproject.toml  setup.cfg
data/ssps/: fitzpatrick_ext_curve.txt
mw_density/: density_profiles.py  isochrones.py  mcmc_functions.py  plotting_helpers.py  sample_selection.py  selection_function.py  selfunc.py  spectra.py
